<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="start">Start</string>
    <string name="shoe_list">Shoe List</string>
    <string name="add">Add</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="company">Company</string>
    <string name="enter_company">Enter company</string>
    <string name="size">Size</string>
    <string name="enter_size">Enter size</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description (optional)</string>
    <string name="formatted_size">Size %s</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_primary_message">Welcome to fastest shoe store inventory app.</string>
    <string name="welcome_secondary_message">In just few steps you can inventory your shoes.</string>
    <string name="instruction_primary_message">How to use this app?</string>
    <string name="instruction_secondary_message">In next screen, it shows shoe list. to add shoe to list, press \"+\" button.</string>
</resources>
